<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="10dp"
    android:layout_margin="10dp"
    android:elevation="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="70dp"

        android:layout_gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="15dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/image"
            android:layout_width="71dp"
            android:layout_gravity="center_vertical"
            android:layout_height="41dp"
           android:src="@drawable/img_2"
            tools:ignore="ContentDescription" />
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aloo_paratha"
                android:textSize="20sp"
                android:fontFamily="@font/nats"
                android:textColor="@color/black"/>
            <RelativeLayout
                android:layout_width="130dp"
                android:layout_marginTop="-15dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:fontFamily="@font/nats"
                    android:text="@string/today"
                    android:textColor="#969696"
                    android:textSize="17sp"
                    tools:ignore="TextContrastCheck" />

                <View
                    android:id="@+id/line"
                    android:layout_width="1.5dp"
                    android:layout_height="24dp"
                    android:layout_centerInParent="true"
                    android:background="#969696"
                    android:padding="10dp" />

                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/line"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/nats"
                    android:text="@string/_7_10am"
                    android:textColor="#969696"
                    android:textSize="17sp"
                    tools:ignore="TextContrastCheck" />
            </RelativeLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <ImageView
            android:id="@+id/icon"
            android:layout_width="36dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="120dp"
            android:src="@drawable/img_3"
            tools:ignore="ContentDescription,ImageContrastCheck" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>